Home page + display data

--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,49 @@
 <template>
-  
 
- 
-</template
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-sm-4">
+        <h2>Weather app</h2>
+        <h5>Pesmel test solution</h5>
+        <div class="fakeimg">Display and aggregate data</div>
+
+        <h3 class="mt-4">Some Links</h3>
+        <p>View the data throught the nav bar or below:</p>
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/weather">Raw Data</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/avg">Average</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <hr class="d-sm-none">
+      </div>
+      <div class="col-sm-8">
+        <h2>Tech stacks</h2>
+        <h5>Technologies I used :</h5>
+        <ul>
+          <li>My SQL for database</li>
+          <li>Java Spring Boot framework for backend</li>
+          <li>Aurelia framework for frontend</li>
+        </ul>
+        <h2 class="mt-5">Feature</h2>
+        <h5>What the app can do:</h5>
+        <ul>
+          <li>Parse data from .csv file</li>
+          <li>View raw data</li>
+          <li>View average, maximum, minimum air temperature based on day, month, year</li>
+          <li>View specific average, min, max, air temperature on/in the specific day, month, year</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+</template>
