--- a/src/app.html
+++ b/src/app.html
@@ -2,30 +2,29 @@
   <!-- <ul repeat.for="nav of router.navigation">
       <li class="${nav.isActive ? 'active' : ''}"><a href.bind="nav.href">${nav.title}</a></li>
   </ul> -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Weather App</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#/weather">Raw Data</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#/weather">Day</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Month</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Year</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#/weather">Raw Data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Average</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
     </div>
   </nav>
   <router-view></router-view>
+
+  <div class="mt-auto p-4 bg-dark text-white text-center">
+    <p>Copyright: Duc Thai</p>
+  </div>
+ 
 </template>
  
