--- a/src/home.html
+++ b/src/home.html
@@ -20,7 +20,10 @@
             <a class="nav-link" href="#/avg">Average</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#/max">Maximum Data</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/min">Minimum Date</a>
           </li>
         </ul>
         <hr class="d-sm-none">
