--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#/min">Minimum</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#/optional">Optional</a>
+        </li>
       </ul>
     </div>
   </nav>
