--- a/src/avgTemp.html
+++ b/src/avgTemp.html
@@ -3,24 +3,26 @@
     <h1 if.bind="state.tableType==='list/avg/day'" class="col-sm-6">${heading} by Day </h1>
     <h1 if.bind="state.tableType==='list/avg/month'" class="col-sm-6">${heading} by Month </h1>
     <h1 if.bind="state.tableType==='list/avg/year'" class="col-sm-6">${heading} by Year </h1>
-    <button click.trigger="dispatchDemo('list/avg/day?page=',0)">Day</button>
-    <button click.trigger="dispatchDemo('list/avg/month','')">Month</button>
-    <button click.trigger="dispatchDemo('list/avg/year','')">Year</button>
-    <div class="table table-responsive  w-100 d-block d-md-table">
+    <div class="container mt-3">
+      <button click.trigger="dispatchDemo('list/avg/day?page=',0)">Day</button>
+      <button click.trigger="dispatchDemo('list/avg/month','')">Month</button>
+      <button click.trigger="dispatchDemo('list/avg/year','')">Year</button>
+    </div>
+    <div class="container mt-3">
       <table class="table align-middle table-hover table-bordered">
         <thead class="table-dark">
           <tr>
             
-            <th if.bind="state.tableType==='list/avg/day'" scope="col">
+            <th if.bind="state.tableType==='list/avg/day'" click.trigger="dispatchSortByDay()" scope="col">
               Day
             </th>
             <th if.bind="state.tableType!=='list/avg/year'" scope="col">
               Month
             </th>
-            <th  scope="col">
+            <th click.trigger="dispatchSort()" scope="col">
               Year
             </th>
-            <th scope="col">
+            <th click.trigger="dispatchSort()" scope="col">
               Air temperature (deg C)
             </th>
           </tr>
