--- a/src/weather.html
+++ b/src/weather.html
@@ -50,7 +50,7 @@
       <ul class="pagination">
         <li if.bind="state.currentPage!=0" class="page-item"><button class="page-link"
             click.trigger="dispatchDemo('all2?pageSize=12&pageNo=', state.currentPage -1 )">Previous</button></li>
-        <li class="page-item"><a class="page-link" click.trigger="dispatchDemo(state.currentPage)">${state.currentPage
+        <li class="page-item"><a class="page-link" click.trigger="dispatchDemo('all2?pageSize=12&pageNo=',state.currentPage)">${state.currentPage
             }</a></li>
         <li class="page-item"><button class="page-link"
             click.trigger="dispatchDemo('all2?pageSize=12&pageNo=', state.currentPage +1)">${state.currentPage +1 }</button></li>
